--- a/package.json
+++ b/package.json
@@ -2,24 +2,40 @@
   "name": "test",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
+  "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vapid": "web-push generate-vapid-keys"
   },
   "dependencies": {
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "@types/workbox-core": "^5.0.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
+    "next-pwa": "latest",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "web-push": "^3.5.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.35",
+    "@types/web-push": "^3.3.2",
+    "@types/workbox-sw": "^4.3.3",
+    "eslint": "^8.22.0",
+    "eslint-config-next": "12.2.5",
+    "typescript": "^5.0.4"
   }
 }
