--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
     "@types/workbox-core": "^5.0.0",
+    "autoprefixer": "10.4.14",
     "dotenv": "^16.0.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "next-pwa": "latest",
     "postcss": "8.4.22",
+    "pwacompat": "^2.0.17",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
