--- a/package.json
+++ b/package.json
@@ -1,42 +1,32 @@
 {
-  "name": "test",
+  "name": "nextjs-dashboard-layout",
   "version": "0.1.0",
   "private": true,
-  "license": "MIT",
-  "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "vapid": "web-push generate-vapid-keys"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.35",
-    "@types/react-dom": "18.0.11",
-    "@types/workbox-core": "^5.0.0",
-    "autoprefixer": "10.4.14",
-    "dotenv": "^16.0.3",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
-    "next": "13.3.0",
-    "next-pwa": "latest",
-    "postcss": "8.4.22",
-    "pwacompat": "^2.0.17",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
-    "typescript": "5.0.4",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.1",
+    "@styled-icons/material": "^10.34.0",
+    "next": "^12.3.4",
+    "next-pwa": "^5.6.0",
+    "pwa": "^1.9.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.1",
     "web-push": "^3.5.0"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.35",
+    "@types/react": "17.0.19",
+    "@types/styled-components": "^5.1.13",
     "@types/web-push": "^3.3.2",
-    "@types/workbox-sw": "^4.3.3",
-    "eslint": "^8.22.0",
-    "eslint-config-next": "12.2.5",
-    "typescript": "^5.0.4"
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.0",
+    "typescript": "4.4.2"
   }
 }
