--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
     "@styled-icons/material": "^10.34.0",
     "next": "^12.3.4",
     "next-pwa": "^5.6.0",
-    "pwa": "^1.9.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.1",
     "web-push": "^3.5.0"
   },
   "devDependencies": {
-    "@types/react": "17.0.19",
-    "@types/styled-components": "^5.1.13",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.37",
+    "@types/styled-components": "^5.1.26",
     "@types/web-push": "^3.3.2",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0",
-    "typescript": "4.4.2"
+    "@types/workbox-sw": "^4.3.3",
+    "eslint": "^8.22.0",
+    "eslint-config-next": "12.2.5",
+    "typescript": "^5.0.4"
   }
 }
