--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@cloudflare/opaque-ts": "^0.7.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
     "@styled-icons/material": "^10.34.0",
     "cookie": "^0.5.0",
