--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
     "@styled-icons/material": "^10.34.0",
+    "clientjs": "^0.2.1",
     "cookie": "^0.5.0",
     "ioredis": "^5.3.2",
     "next": "^12.3.4",
@@ -25,6 +26,7 @@
     "web-push": "^3.5.0"
   },
   "devDependencies": {
+    "@types/clientjs": "^0.2.0",
     "@types/cookie": "^0.5.1",
     "@types/node": "^18.16.0",
     "@types/react": "^18.0.37",
