--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
+    "@simplewebauthn/browser": "^7.2.0",
+    "@simplewebauthn/server": "^7.2.0",
     "@styled-icons/material": "^10.34.0",
     "clientjs": "^0.2.1",
     "cookie": "^0.5.0",
@@ -26,6 +28,7 @@
     "web-push": "^3.5.0"
   },
   "devDependencies": {
+    "@simplewebauthn/typescript-types": "^7.0.0",
     "@types/clientjs": "^0.2.0",
     "@types/cookie": "^0.5.1",
     "@types/node": "^18.16.0",
