--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie": "^0.5.0",
     "ioredis": "^5.3.2",
     "next": "^12.3.4",
+    "next-auth": "^4.22.1",
     "next-pwa": "^5.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
