--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-pwa": "^5.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-qr-code": "^2.0.11",
     "styled-components": "^5.3.1",
     "web-push": "^3.5.0"
   },
